# soloist

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  KNOWN-DIVERGENCES.md  PRODUCT.md  PROGRESS-SETTINGS.md  PROGRESS.md  README.md  REVIEW-PROMPT.md  SESSION-START-PROMPT.md  deny.toml  justfile  skills-lock.json  solo.schema.json
crates/app/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.e2e.conf.json
crates/app/bundle/: deb-postinst.sh  deb-postrm.sh  soloist-mimetype.xml  soloist.desktop
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: commands.rs  companion_bins.rs  companion_bins_tests.rs  demo.rs  integration_servers.rs  integration_servers_tests.rs  ipc_server.rs  ipc_server_tests.rs  lib.rs  main.rs  notifier.rs  open_project.rs  open_project_tests.rs  peer_cred.rs  peer_cred_tests.rs  pty_bridge.rs  pty_bridge_tests.rs  tray.rs
crates/app/src/commands/: coordination.rs  export.rs  mod.rs  orchestration.rs  project_settings.rs  settings.rs  settings_tests.rs  templates.rs  templates_tests.rs  timers.rs
crates/app/src/ipc_server/: dispatch.rs  dispatch_tests.rs
crates/app/ui/: doctor.config.ts  eslint.config.js  harness.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.setup.ts
crates/app/ui/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  domain.ts  harness.tsx  index.css  main.tsx  vite-env.d.ts
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  cli_tests.rs  client.rs  client_tests.rs  command.rs  command_tests.rs  lib.rs  main.rs
crates/cli/tests/: shell.rs
crates/core/: Cargo.toml
crates/core/examples/: gen_solo_schema.rs
crates/core/src/: agents.rs  cache.rs  cache_tests.rs  composition.rs  config.rs  configchange.rs  coordination.rs  debounce.rs  events.rs  facade.rs  facade_tests.rs  hash.rs  identity.rs  identity_tests.rs  idle.rs  ids.rs  lib.rs  metrics.rs  notify.rs  orchestration.rs  orphans.rs  ports.rs  portscan.rs  process.rs  projects.rs  settings.rs  settings_tests.rs  shellenv.rs  shellenv_tests.rs  supervision.rs  supervision_tests.rs  supervisor.rs  support.rs  sync.rs  template.rs  template_tests.rs  terminal.rs  terminal_tests.rs  testing.rs  trust.rs
crates/core/src/agents/: detect.rs  detect_tests.rs  lineage.rs  lineage_tests.rs  mod.rs  repo.rs  resume.rs  resume_tests.rs  tool.rs  tool_tests.rs
crates/core/src/config/: diff.rs  edit.rs  edit_tests.rs  load.rs  model.rs  review.rs  schema.rs  schema_tests.rs  sync.rs  sync_tests.rs  write.rs
crates/core/src/coordination/: diagram.rs  diagram_repo.rs  diagram_tests.rs  kv.rs  kv_repo.rs  kv_tests.rs  lease.rs  lease_tests.rs  link.rs  link_tests.rs  prompt_template.rs  prompt_template_repo.rs  prompt_template_tests.rs  releaser.rs  repo.rs  scheduler.rs  scheduler_tests.rs  scratchpad.rs  scratchpad_link.rs  scratchpad_repo.rs  scratchpad_tests.rs  template.rs  template_evictor.rs  template_evictor_tests.rs  template_render.rs  template_render_tests.rs  template_repo.rs  template_scan.rs  template_scan_tests.rs  template_tests.rs  timer.rs  timer_repo.rs  timer_tests.rs  todo.rs  todo_blocker.rs  todo_comment.rs  todo_doc.rs  todo_releaser.rs  todo_repo.rs  todo_tests.rs
crates/core/src/facade/: blocking.rs  blocking_tests.rs  commands.rs  commands_tests.rs  coordination.rs  coordination_tests.rs  diagram.rs  diagram_tests.rs  kv.rs  kv_tests.rs  link.rs  link_tests.rs  loops.rs  orchestration.rs  orchestration_tests.rs  output.rs  output_tests.rs  project_settings.rs  project_settings_tests.rs  prompt_template.rs  prompt_template_tests.rs  scoped.rs  scoped_process.rs  scoped_tests.rs  scoped_todo.rs  scratchpad.rs  scratchpad_tests.rs  session.rs  session_tests.rs  settings.rs  settings_tests.rs  support.rs  support_tests.rs  template.rs  template_tests.rs  terminal.rs  terminal_tests.rs  todo.rs  todo_tests.rs
crates/core/src/filewatch/: mod.rs  policy.rs  policy_tests.rs  reactor.rs  reactor_tests.rs  watcher.rs
crates/core/src/metrics/: mod.rs  probe.rs  sampler.rs  sampler_tests.rs
crates/core/src/notify/: mod.rs  notifier.rs  reactor.rs  reactor_tests.rs
crates/core/src/ports/: bundle.rs  mod.rs
crates/core/src/portscan/: mod.rs  probe.rs  scanner.rs  scanner_tests.rs  test_support.rs  waiter.rs  waiter_tests.rs
crates/core/src/projects/: mod.rs  (+7 more)
crates/httpapi/: Cargo.toml
crates/httpapi/src/: auth.rs  cors.rs  cors_tests.rs  host.rs  host_tests.rs  lib.rs  lib_tests.rs  mutations.rs  routes.rs  state.rs  state_tests.rs
crates/httpapi/tests/: mutations.rs  routes.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: error.rs  frame.rs  frame_tests.rs  http.rs  http_tests.rs  lib.rs  paths.rs  protocol.rs  protocol_tests.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: args.rs  client.rs  client_tests.rs  main.rs  prompts.rs  prompts_tests.rs  server.rs  server_tests.rs  suggestions.rs  suggestions_tests.rs  testing.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs
crates/pty/tests/: integration.rs  orchestration.rs  soak.rs
crates/store/: Cargo.toml
crates/store/src/: agents.rs  agents_tests.rs  diagrams.rs  diagrams_tests.rs  doc_to_markdown.rs  doc_to_markdown_tests.rs  feedback.rs  feedback_tests.rs  kv.rs  kv_tests.rs  leases.rs  leases_tests.rs  lib.rs  meta.rs  migrate.rs  migrate_tests.rs  project_settings.rs  project_settings_tests.rs  projects.rs  projects_rebuild.rs  projects_rebuild_tests.rs  prompt_templates.rs  prompt_templates_tests.rs  runtime.rs  scratchpads.rs  scratchpads_tests.rs  settings.rs  settings_tests.rs  templates.rs  templates_tests.rs  timers.rs  timers_tests.rs  todo_json.rs  todo_rows.rs  todos.rs  todos_tests.rs  trust.rs
crates/sys/: Cargo.toml
crates/sys/src/: agents.rs  agents_tests.rs  filewatch.rs  lib.rs  metrics.rs  metrics_tests.rs  portscan.rs  proc.rs  shell.rs  shellenv.rs  shellenv_tests.rs  summarize.rs  summarize_tests.rs
crates/sys/tests/: agents.rs  config_watch.rs  filewatch.rs  metrics.rs  portscan.rs  shellenv.rs
e2e/fixtures/lead-agent/: Cargo.toml
(+567 files in other folders)
