[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/store",
    "crates/pty",
    "crates/sys",
    "crates/ipc",
    "crates/httpapi",
    "crates/mcp",
    "crates/cli",
    "crates/app",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
authors = ["Soloist contributors"]
repository = "https://github.com/ArtMin96/soloist"

# Keep panic = "unwind" (the default): the supervisor catches task panics to isolate
# faults, which panic = "abort" would prevent.
[profile.release]
lto = true
codegen-units = 1
strip = true
