[package]
name = "soloist-app"
description = "The soloist desktop app (Tauri v2) — hosts the domain core, the command/event adapter, and the loopback HTTP API; bundles the React/TS UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "soloist"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
soloist-core = { path = "../core" }
soloist-httpapi = { path = "../httpapi" }
soloist-ipc = { path = "../ipc" }
soloist-pty = { path = "../pty" }
soloist-store = { path = "../store" }
soloist-sys = { path = "../sys" }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
