[package]
name = "soloist-app"
description = "The soloist desktop app (Tauri v2) — hosts the domain core, the command/event adapter, and the loopback HTTP API; bundles the React/TS UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "soloist"
path = "src/main.rs"

[features]
default = ["mcp"]
# The local MCP/IPC server (the app-side half of the soloist-mcp transport). It links into
# the app binary, so it is gated at compile time: turning the feature off drops the IPC
# server adapter, its peer-credential dependency, and the app's direct soloist-ipc dependency,
# so the app still builds and runs without it. (The soloist-ipc crate itself stays compiled —
# the store delegates its data-directory resolution to it — but no IPC server is wired in.)
mcp = ["dep:soloist-ipc", "dep:nix", "tokio/net"]

[dependencies]
nix = { version = "0.29", features = ["process"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
soloist-core = { path = "../core" }
soloist-httpapi = { path = "../httpapi" }
soloist-ipc = { path = "../ipc", optional = true }
soloist-pty = { path = "../pty" }
soloist-store = { path = "../store" }
soloist-sys = { path = "../sys" }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
soloist-core = { path = "../core", features = ["testing"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
