[package]
name = "soloist-core"
description = "Pure, framework-free domain core for Soloist. Imports no tauri, rmcp, axum, or rusqlite."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Exposes the in-memory port fakes in `core::testing` to other crates' tests
# (adapters reuse the one fake set instead of re-rolling them). Off by default,
# so the fakes never compile into a production build.
testing = []

[dependencies]
async-trait = "0.1"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7"
vte = "0.15"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
