[package]
name = "soloist-httpapi"
description = "Loopback HTTP API adapter for Soloist."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
