[package]
name = "soloist-httpapi"
description = "Loopback HTTP API adapter for Soloist."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
soloist-ipc = { path = "../ipc" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
# Constant-time token comparison, so the auth check leaks nothing through timing.
subtle = "2"
tokio = { version = "1", features = ["net", "rt"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
soloist-core = { path = "../core", features = ["testing"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
