[package]
name = "soloist-ipc"
description = "Local IPC transport and message types shared across the Soloist binaries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
