[package]
name = "soloist-mcp"
description = "Soloist's stdio MCP server: a thin adapter to the core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
soloist-ipc = { path = "../ipc" }
