[package]
name = "soloist-mcp"
description = "Soloist's stdio MCP server: a thin adapter to the core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros", "schemars"] }
soloist-core = { path = "../core" }
soloist-ipc = { path = "../ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }

[dev-dependencies]
tempfile = "3"
# `test-util` provides the paused clock the request-timeout test advances deterministically.
tokio = { version = "1", features = ["test-util"] }
