[package]
name = "soloist-pty"
description = "Process and PTY spawner for Soloist, built on portable-pty and nix."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
async-trait = "0.1"
nix = { version = "0.29", features = ["signal", "process", "user"] }
portable-pty = "0.9"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tempfile = "3"
