[package]
name = "soloist-store"
description = "SQLite-backed storage adapter for Soloist."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
rusqlite = { version = "0.40", features = ["bundled"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
