[package]
name = "soloist-sys"
description = "OS monitoring probes for Soloist (CPU/memory via sysinfo, and /proc-based port discovery), behind the core's metrics ports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
# Only the process/CPU/memory surface — drop disk/network/component code to stay small.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
