[package]
name = "soloist-sys"
description = "OS adapters for Soloist (CPU/memory and port discovery over /proc, and notify-based file watching), behind the core's driven ports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
# CPU/memory and port discovery read `/proc` directly; `libc` is only for `sysconf`
# (clock ticks per second, page size) when converting those readings to seconds and bytes.
libc = "0.2"
# Recursive filesystem watching for file-watch restarts. Default features off: on Linux the
# inotify backend is unconditional, so this drops the macOS backend and the unused
# crossbeam-channel delivery path (we use the closure callback), keeping the bundle small.
notify = { version = "8", default-features = false }
# The file-watch port hands the adapter a tokio mpsc sender to forward changes on; only the
# sync primitives are needed here.
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tempfile = "3"
# The integration test constructs the change channel the file-watch port forwards on.
tokio = { version = "1", default-features = false, features = ["sync"] }
