[package]
name = "soloist-sys"
description = "OS adapters for Soloist (CPU/memory and port discovery over /proc, and notify-based file watching), behind the core's driven ports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soloist-core = { path = "../core" }
# CPU/memory and port discovery read `/proc` directly; `libc` is only for `sysconf`
# (clock ticks per second, page size) when converting those readings to seconds and bytes.
libc = "0.2"
# Resolving the user's login shell for environment capture needs the passwd entry; only the
# `user` feature (current uid + passwd lookup) is used.
nix = { version = "0.29", features = ["user"] }
# Recursive filesystem watching for file-watch restarts. Default features off: on Linux the
# inotify backend is unconditional, so this drops the macOS backend and the unused
# crossbeam-channel delivery path (we use the closure callback), keeping the bundle small.
notify = { version = "8", default-features = false }
# The file-watch port hands the adapter a tokio mpsc sender to forward changes on; only the
# sync primitives are needed here.
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tempfile = "3"
# The integration tests construct the change channel the file-watch port forwards on, and
# the config-watch test drives the real reactor over this crate's real watcher.
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
soloist-core = { path = "../core", features = ["testing"] }
